--- a/form.css
+++ b/form.css
@@ -5,13 +5,13 @@
 }
 body{
     letter-spacing: 1px;
-    background: linear-gradient(to right,#00008b,#e13a9d);
+    background: #fff;
     /* height: 1000px; */
     display: flex;
     justify-content: center;
 }
 h1{
-    color: white;
+    color: black;
     padding: 50px;
     font-size: 40px;
     text-align: center;
@@ -23,6 +23,8 @@ h1{
     align-items: center;
     padding: 40px;
     background-color:#000047;
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
     box-shadow: 0px 10px 30px rgba(0, 0, 0,0.5);
     transition: 0.5s all ease-in-out;
 }
@@ -31,25 +33,29 @@ h1{
 }
 .form div i{
     font-size: 20px;
-    color: #fff;
+    color: black;
     margin: 0 10px;
 }
 .form div input{
     border: none;
-    color: #fff;
+    color: black;
     font-size: 20px;
     border-bottom: 2px solid ;
     background: transparent;
 }
 .form div textarea{
     border: none;
-    color: #fff;
+    color: black;
     font-size: 20px;
+    /* width: 60px; */
     border-bottom: 2px solid ;
     background: transparent;
 }
 .form div input ::placeholder{
-    color: #fff;
+    color: black;
+}
+.message{
+    display: flex;
 }
 .form div{
     margin: 10px;
@@ -59,7 +65,7 @@ h1{
     background: linear-gradient(to right,#e13a9d,#00008b);
     padding: 10px 30px;
     border: 0;
-    color: beige;
+    color: #fff;
     height: 40px;
     font-weight: 500;
     font-size: 15px;
