changed ui and some style issues

--- a/form.css
+++ b/form.css
@@ -1,80 +1,50 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    letter-spacing: 1px;
-    background: #fff;
-    /* height: 1000px; */
-    display: flex;
-    justify-content: center;
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
-h1{
-    color: black;
-    padding: 50px;
-    font-size: 40px;
-    text-align: center;
+
+form input:focus,
+form textarea:focus {
+  outline: none;
 }
-.form{ 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 40px;
-    background-color:#000047;
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    box-shadow: 0px 10px 30px rgba(0, 0, 0,0.5);
-    transition: 0.5s all ease-in-out;
+
+form div i {
+  font-size: 20px;
+  color: black;
+  margin: 0 10px;
 }
-.form:hover{
-    box-shadow: 0px 50px 30px rgba(0, 0, 0,0.5);
+form div input {
+  border: none;
+  color: black;
+  font-size: 20px;
+  border-bottom: 1px solid;
+  padding: 0.25rem;
+  background: transparent;
 }
-.form div i{
-    font-size: 20px;
-    color: black;
-    margin: 0 10px;
+form div textarea {
+  border: none;
+  color: black;
+  font-size: 20px;
+  /* width: 60px; */
+  border-bottom: 1px solid;
+  padding: 0.25rem;
+  background: transparent;
 }
-.form div input{
-    border: none;
-    color: black;
-    font-size: 20px;
-    border-bottom: 2px solid ;
-    background: transparent;
+form div input::placeholder {
+  font-size: 1rem;
 }
-.form div textarea{
-    border: none;
-    color: black;
-    font-size: 20px;
-    /* width: 60px; */
-    border-bottom: 2px solid ;
-    background: transparent;
+form textarea {
+  resize: vertical;
 }
-.form div input ::placeholder{
-    color: black;
-}
-.message{
-    display: flex;
-}
-.form div{
-    margin: 10px;
-}
-.btn{
-    margin-top: 10px;
-    background: linear-gradient(to right,#e13a9d,#00008b);
-    padding: 10px 30px;
-    border: 0;
-    color: #fff;
-    height: 40px;
-    font-weight: 500;
-    font-size: 15px;
-    width:140px;
-    cursor: pointer;
-    transition: all 0.7s ease;
-}
-.btn:hover{
-    background: linear-gradient(to right,#00008b,#e13a9d);
-    width: 170px;
-    height: 50px;
+.message {
+  display: flex;
 }
