--- a/style.css
+++ b/style.css
@@ -106,7 +106,15 @@ h1 {
   font-size: 0.85rem;
 }
 
+.social-media {
+  display: flex;
+  gap: 1.75rem;
+}
+
 .social-media a {
-  font-size: 25px;
-  padding: 0px 12px;
+  font-size: 1.5rem;
+}
+
+.social-media a:hover i {
+  color: rgba(245, 245, 220, 0.85) !important;
 }
